Replace service access by API key

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -668,7 +668,7 @@
 	"stash.create.visual_labeling.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
 	"stash.create.visual_labeling.label": "Anotar per selecció",
 	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta Knowledge Box. De forma predeterminada apareix la zona escollida a l’Account",
-	"stash.create_service_access": "Crea un nou Service Access",
+	"stash.create_service_access": "Crea una clau d'API nova",
 	"stash.delete.delete": "Eliminar Knowledge Box?",
 	"stash.delete.error": "Error en crear el Knowledge Box",
 	"stash.delete.warning": "Si borres la Knowledge Box {{ kb }} també s'esborraran totes les dades que conté.",
@@ -704,7 +704,7 @@
 	"stash.search_users_add": "Vols afegir aquest nou usuari al compte?",
 	"stash.seats_available": "Queden {{ seats }} seients",
 	"stash.see_stats": "Veure dades",
-	"stash.service_access": "Service Access",
+	"stash.service_access": "Tecles API",
 	"stash.service_access_description": "Important! Copieu i deseu la clau de l'API. Desapareixerà un cop afegit.",
 	"stash.settings.processes.classifier": "Formació sobre la intenció de cerca d'etiquetes",
 	"stash.settings.processes.classifier_info": "Per obtenir suggeriments de cerca d'etiquetes precisos, el contingut existent s'ha d'etiquetar. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
@@ -765,7 +765,7 @@
 	"stash.valid_domains_label": "Dominis des d’on es pot enviar correu electrònic",
 	"stash.valid_emails": "Afegeix, separats per comes, els correus electrònics dels quals s’acceptarà correu electrònic",
 	"stash.valid_emails_label": "Correus electrònics",
-	"stash.view_edit_service_access": "Visualitza / Edita els Service Access existents",
+	"stash.view_edit_service_access": "Visualitza / edita les claus de l'API existents",
 	"stash.widgets.answers.help": "Genera resposta a les preguntes dels usuaris i permet xatejar amb el sistema",
 	"stash.widgets.answers.label": "Generació de respostes",
 	"stash.widgets.autofilter.help": "Detecta les entitats mencionades a la consulta de l'usuari i les converteix automàticament en filtres",
