--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -669,7 +669,7 @@
 	"stash.create.visual_labeling.help": "Ermöglicht die visuelle Auswahl einiger Teile des Dokumentlayouts und deren Kommentierung.",
 	"stash.create.visual_labeling.label": "Kommentieren Sie nach Auswahl",
 	"stash.create.zone_description": "Wählen Sie die Zone und den Verarbeitungsanbieter aus, den Sie für diese Knowledge Box verwenden möchten (standardmäßig die Zone des Kontos).",
-	"stash.create_service_access": "Erstellen Sie einen neuen Servicezugriff",
+	"stash.create_service_access": "Erstellen Sie einen neuen API-Schlüssel",
 	"stash.delete.delete": "Knowledge Box löschen?",
 	"stash.delete.error": "Fehler beim Erstellen der Knowledge Box",
 	"stash.delete.warning": "Wenn Sie die Knowledge Box {{ kb }}löschen, werden auch alle Daten gelöscht",
@@ -705,7 +705,7 @@
 	"stash.search_users_add": "Möchten Sie diesen Benutzer wirklich zum Konto hinzufügen?",
 	"stash.seats_available": "{{ seats }} Plätze verfügbar",
 	"stash.see_stats": "Siehe Daten",
-	"stash.service_access": "Servicezugang",
+	"stash.service_access": "API-Schlüssel",
 	"stash.service_access_description": "Wichtig! Kopieren und speichern Sie den API-Schlüssel. Es verschwindet, sobald es hinzugefügt wurde.",
 	"stash.settings.processes.classifier": "Schulung zur Label-Suchabsicht",
 	"stash.settings.processes.classifier_info": "Um genaue Vorschläge für die Label-Suche zu erhalten, müssen vorhandene Inhalte mit Labels versehen werden. Je mehr Inhalte gekennzeichnet werden, desto besser wird die Schulung. Sie können auf der Ontologieseite neue Beschriftungen und Klassifizierungen erstellen.",
@@ -766,7 +766,7 @@
 	"stash.valid_domains_label": "Domänen, von denen E-Mails gesendet werden können",
 	"stash.valid_emails": "Fügen Sie durch Kommas getrennt die E-Mail-Adressen hinzu, von denen E-Mails akzeptiert werden.",
 	"stash.valid_emails_label": "E-Mails",
-	"stash.view_edit_service_access": "Vorhandenen Dienstzugriff anzeigen/bearbeiten",
+	"stash.view_edit_service_access": "Vorhandene API-Schlüssel anzeigen/bearbeiten",
 	"stash.widgets.answers.help": "Generieren Sie eine Antwort auf die Fragen des Benutzers und ermöglichen Sie den Chat mit dem System",
 	"stash.widgets.answers.label": "Antwortgenerierung",
 	"stash.widgets.autofilter.help": "Erkennt in der Benutzerabfrage erwähnte Entitäten und wandelt sie automatisch in Filter um.",
