--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -669,7 +669,7 @@
 	"stash.create.visual_labeling.help": "Allow to visually select some parts of the document layout and annotate them.",
 	"stash.create.visual_labeling.label": "Annotate by selection",
 	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this Knowledge Box (defaults to the account’s zone)",
-	"stash.create_service_access": "Create new Service Access",
+	"stash.create_service_access": "Create new API key",
 	"stash.delete.delete": "Delete Knowledge Box?",
 	"stash.delete.error": "Error when creating the Knowledge Box",
 	"stash.delete.warning": "If you delete the Knowledge Box {{ kb }}, all data will also be deleted",
@@ -705,7 +705,7 @@
 	"stash.search_users_add": "Do you really want to add this user to the account? ",
 	"stash.seats_available": "{{ seats }} seats available",
 	"stash.see_stats": "See data",
-	"stash.service_access": "Service Access",
+	"stash.service_access": "API keys",
 	"stash.service_access_description": "Important! Copy and save the API key. It will disappear once added.",
 	"stash.settings.processes.classifier": "Label search intent training",
 	"stash.settings.processes.classifier_info": "In order to get accurate label search suggestions, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page. ",
@@ -766,7 +766,7 @@
 	"stash.valid_domains_label": "Domains from which email can be sent",
 	"stash.valid_emails": "Add, separated by comas, the emails addresses from witch emails will be accepted. ",
 	"stash.valid_emails_label": "Emails",
-	"stash.view_edit_service_access": "View / Edit existing Service Access",
+	"stash.view_edit_service_access": "View / Edit existing API keys",
 	"stash.widgets.answers.help": "Generate a response to the user's questions and allow to chat with the system",
 	"stash.widgets.answers.label": "Answer generation",
 	"stash.widgets.autofilter.help": "Detects entities mentioned in the user query and turns them automatically into filters.",
