--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -668,7 +668,7 @@
 	"stash.create.visual_labeling.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
 	"stash.create.visual_labeling.label": "Anotar por selección",
 	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta Knowledge Box. De forma predeterminada aparece la zona escogida en el Account",
-	"stash.create_service_access": "Crea un nuevo Service Access",
+	"stash.create_service_access": "Crear nueva clave API",
 	"stash.delete.delete": "¿Eliminar Knowledge Box?",
 	"stash.delete.error": "Error al crear el Knowledge Box",
 	"stash.delete.warning": "Si eliminas la Knowledge Box {{ kb }} también se eliminaran todos los datos que contenga",
@@ -704,7 +704,7 @@
 	"stash.search_users_add": "¿Quieres añadir el usuario a la cuenta?",
 	"stash.seats_available": "Quedan {{ seats }} asientos",
 	"stash.see_stats": "Ver los datos",
-	"stash.service_access": "Service Access",
+	"stash.service_access": "Claves de api",
 	"stash.service_access_description": "¡Importante! Copie y guarde la clave API. Desaparecerá una vez añadido.",
 	"stash.settings.processes.classifier": "Capacitación de intención de búsqueda de etiquetas",
 	"stash.settings.processes.classifier_info": "Para obtener sugerencias precisas de búsqueda de etiquetas, se debe etiquetar el contenido existente. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas y clasificaciones desde la página de ontología.",
@@ -765,7 +765,7 @@
 	"stash.valid_domains_label": "Dominios desde donde se puede enviar correo electrónico",
 	"stash.valid_emails": "Añada, separado por comas, las direcciones de correos electrónicos de los cuales se aceptará correo electrónico. ",
 	"stash.valid_emails_label": "Correos electrónicos",
-	"stash.view_edit_service_access": "Visualiza / Edita los Service Access existentes",
+	"stash.view_edit_service_access": "Ver/Editar claves API existentes",
 	"stash.widgets.answers.help": "Generar respuesta a las preguntas de los usuarios y permitir chatear con el sistema",
 	"stash.widgets.answers.label": "Generación de respuesta",
 	"stash.widgets.autofilter.help": "Detacta las entidades mencionadas en la consulta del usuario y las convierte automáticamente en filtros",
