--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -669,7 +669,7 @@
 	"stash.create.visual_labeling.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
 	"stash.create.visual_labeling.label": "Annoter par sélection",
 	"stash.create.zone_description": "Sélectionnez la zone et le fournisseur de traitement que vous souhaitez utiliser pour cette Knowledge Box (par défaut, la zone du compte)",
-	"stash.create_service_access": "Créer un nouvel accès au service",
+	"stash.create_service_access": "Créer une nouvelle clé API",
 	"stash.delete.delete": "Supprimer la Knowledge Box ?",
 	"stash.delete.error": "Erreur lors de la création de la Knowledge Box",
 	"stash.delete.warning": "Si vous supprimez la Knowledge Box {{ kb }}, toutes les données seront également supprimées",
@@ -705,7 +705,7 @@
 	"stash.search_users_add": "Voulez-vous vraiment ajouter cet utilisateur au compte ?",
 	"stash.seats_available": "{{ seats }}  places disponibles",
 	"stash.see_stats": "Voir les données",
-	"stash.service_access": "Accès aux services",
+	"stash.service_access": "Clés API",
 	"stash.service_access_description": "Important! Copiez et enregistrez la clé API. Il disparaîtra une fois ajouté.",
 	"stash.settings.processes.classifier": "Formation sur l'intention de recherche d'étiquettes",
 	"stash.settings.processes.classifier_info": "Afin d'obtenir des suggestions de recherche d'étiquettes précises, le contenu existant doit être étiqueté. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes et classifications à partir de la page ontologie.",
@@ -766,7 +766,7 @@
 	"stash.valid_domains_label": "Domaines à partir desquels des e-mails peuvent être envoyés",
 	"stash.valid_emails": "Ajoutez, séparées par des virgules, les adresses emails des sorcières qui seront acceptées.",
 	"stash.valid_emails_label": "Courriels",
-	"stash.view_edit_service_access": "Afficher/Modifier l'accès au service existant",
+	"stash.view_edit_service_access": "Afficher/Modifier les clés API existantes",
 	"stash.widgets.answers.help": "Générer une réponse aux questions de l'utilisateur et permettre de discuter avec le système",
 	"stash.widgets.answers.label": "Génération de réponses",
 	"stash.widgets.autofilter.help": "Détecte les entités mentionnées dans la requête de l'utilisateur et les transforme automatiquement en filtres.",
