--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -669,7 +669,7 @@
 	"stash.create.visual_labeling.help": "Permite selecionar visualmente algumas partes do layout do documento e anotá-las.",
 	"stash.create.visual_labeling.label": "Anotar por seleção",
 	"stash.create.zone_description": "Selecione a zona e o provedor de processamento que você gostaria de usar para esta Knowledge Box (o padrão é a zona da conta)",
-	"stash.create_service_access": "Criar novo acesso ao serviço",
+	"stash.create_service_access": "Crie uma nova chave de API",
 	"stash.delete.delete": "Excluir Knowledge Box?",
 	"stash.delete.error": "Erro ao criar a Knowledge Box",
 	"stash.delete.warning": "Se você excluir a Knowledge Box {{ kb }}, todos os dados também serão excluídos",
@@ -705,7 +705,7 @@
 	"stash.search_users_add": "Você realmente deseja adicionar este usuário à conta?",
 	"stash.seats_available": "{{ seats }} assentos disponíveis",
 	"stash.see_stats": "Ver dados",
-	"stash.service_access": "Acesso ao serviço",
+	"stash.service_access": "Chaves de Api",
 	"stash.service_access_description": "Importante! Copie e salve a chave API. Ele desaparecerá depois de adicionado.",
 	"stash.settings.processes.classifier": "Treinamento de intenção de pesquisa de rótulo",
 	"stash.settings.processes.classifier_info": "Para obter sugestões precisas de pesquisa de rótulos, o conteúdo existente deve ser rotulado. À medida que mais conteúdo for rotulado, o treinamento melhorará. Você pode criar novos rótulos e classificações na página da ontologia.",
@@ -766,7 +766,7 @@
 	"stash.valid_domains_label": "Domínios dos quais o email pode ser enviado",
 	"stash.valid_emails": "Adicione, separados por vírgulas, os endereços de e-mails dos quais serão aceitos.",
 	"stash.valid_emails_label": "Emails",
-	"stash.view_edit_service_access": "Ver/editar acesso ao serviço existente",
+	"stash.view_edit_service_access": "Visualizar/editar chaves de API existentes",
 	"stash.widgets.answers.help": "Gere uma resposta às dúvidas do usuário e permita conversar com o sistema",
 	"stash.widgets.answers.label": "Geração de resposta",
 	"stash.widgets.autofilter.help": "Detecta entidades mencionadas na consulta do usuário e as transforma automaticamente em filtros.",
