[sc-7592] Consistent naming (#1083)
* [sc-7592] Consistent naming

- Paragraph => Text block
- token (API context) => API key
- Remove some unused translations

* Replace service access by API key

* Update libs/common/src/assets/i18n/ca.json

Co-authored-by: operramon <52449656+operramon@users.noreply.github.com>

---------

Co-authored-by: operramon <52449656+operramon@users.noreply.github.com>

--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -58,7 +58,7 @@
 	"account.manage": "Konto verwalten",
 	"account.manage_account_users": "Verwaltung von Kontobenutzern",
 	"account.monthly_consumibles": "Monatliche Verbrauchsmaterialien",
-	"account.new_token": "Neues Token",
+	"account.new_token": "Neuer API-Schlüssel",
 	"account.nua_client": "Kundenname",
 	"account.nua_key_activity": "NU-API-Schlüsselaktivitätsprotokoll",
 	"account.nua_key_activity_subtitle": "Knowledge Box-Aktivität der letzten 30 Tage",
@@ -84,7 +84,7 @@
 	"account.stash.users": "Benutzerverwaltung",
 	"account.threshold": "Verbrauchsschwelle",
 	"account.title": "Name",
-	"account.token_description": "<strong>Wichtig!</strong> Kopieren und speichern Sie den Token-Code. Es verschwindet, sobald es hinzugefügt wurde.",
+	"account.token_description": "<strong>Wichtig!</strong> Kopieren und speichern Sie den API-Schlüssel. Es verschwindet, sobald es hinzugefügt wurde.",
 	"account.token_generation_warning": "Wenn Sie einen neuen Schlüssel generieren, wird der aktuelle Schlüssel deaktiviert und alle laufenden Jobs gehen verloren",
 	"account.total_queries": "Gesamtzahl der Abfragen",
 	"account.type.label": "Tier",
@@ -113,9 +113,6 @@
 	"activity.resource": "Ressource",
 	"activity.search": "Abfragen",
 	"activity.timestamp": "Zeitstempel",
-	"autocomplete.section.main": "Vorschlag für ein Schlüsselkonzept",
-	"autocomplete.section.next_words": "Vorgeschlagene Wörter",
-	"autocomplete.section.paragraph": "Vorgeschlagener Absatz",
 	"billing.address": "Adresse",
 	"billing.already_available": "Schon verfügbar",
 	"billing.amount": "Menge",
@@ -146,7 +143,7 @@
 	"billing.end-subscription": "Abonnement beenden",
 	"billing.enterprise_ready": "Wir sind bereit für Unternehmen",
 	"billing.estimate_cost": "Schätzen Sie Ihre Kosten",
-	"billing.extra_paragraphs_cost": "Wenn das enthaltene Limit für gespeicherte Absätze überschritten wird, berechnen wir {{price}} /gespeicherten Absatz.",
+	"billing.extra_paragraphs_cost": "Wenn das enthaltene Limit für gespeicherte Textblöcke überschritten wird, berechnen wir {{price}} / gespeicherten Textblock.",
 	"billing.features.anon": "Datenanonymisierung",
 	"billing.features.apikey": "Selbstgehosteter API-Schlüssel",
 	"billing.features.boost": "Indexierungs-Booster",
@@ -169,7 +166,6 @@
 	"billing.history.title": "Abrechnungsverlauf des Kontos",
 	"billing.hour": "Stunde",
 	"billing.hours": "Std",
-	"billing.ingestion_cost.description": "Die Berechnung hängt von der Anzahl der Absätze der hochgeladenen Dokumente ab. Mit dem Budgetrechner können Sie ein Monatsbudget basierend auf Ihren spezifischen Anforderungen erstellen.",
 	"billing.ingestion_cost.title": "Einnahmekosten",
 	"billing.invalid_address": "Die angegebene Adresse ist ungültig",
 	"billing.invalid_card": "Wir konnten Ihre Karte nicht validieren.",
@@ -181,12 +177,12 @@
 	"billing.next-payment": "Nächste Zahlung",
 	"billing.not_company": "Ich bin kein Unternehmen",
 	"billing.order_number": "Bestellnummer",
-	"billing.paragraphs_per_file": "Eine 10-seitige Textdatei enthält etwa 300 Absätze",
+	"billing.paragraphs_per_file": "Eine 10-seitige Textdatei enthält etwa 300 Textblöcke",
 	"billing.parameter.files": "Wie viele Dokumente?",
 	"billing.parameter.generative": "Wie viele generative Antworten?",
 	"billing.parameter.media": "Wie viele Stunden Videos/Audios?",
-	"billing.parameter.paragraphs": "Wie viele gespeicherte Absätze?",
-	"billing.parameter.paragraphs_processed": "Wie viele verarbeitete Absätze?",
+	"billing.parameter.paragraphs": "Wie viele gespeicherte Textblöcke?",
+	"billing.parameter.paragraphs_processed": "Wie viele verarbeitete Textblöcke?",
 	"billing.parameter.predict": "Wie viele Vorhersagen?",
 	"billing.parameter.qa": "Wie viele generative Antworten?",
 	"billing.parameter.searches": "Wie viele Suchanfragen?",
@@ -202,8 +198,8 @@
 	"billing.quotas.ingestion": "Einnahme",
 	"billing.quotas.kbs": "Anzahl der Knowledge Boxes",
 	"billing.quotas.media": "Video- und Audioindizierung",
-	"billing.quotas.paragraphs": "Absatz gespeichert",
-	"billing.quotas.paragraphs_processed": "Anzahl des Absatzes",
+	"billing.quotas.paragraphs": "Textblock gespeichert",
+	"billing.quotas.paragraphs_processed": "Anzahl der Textblöcke",
 	"billing.quotas.predict": "Prognostiziert",
 	"billing.quotas.search_inference": "Suche / Schlussfolgerung",
 	"billing.quotas.searches": "Suchen",
@@ -298,7 +294,6 @@
 	"generic.all": "Alles",
 	"generic.allow": "Ermöglichen",
 	"generic.announce": "Nutzerinformation",
-	"generic.authentication_token": "Authentifizierungstoken",
 	"generic.back": "Zurück",
 	"generic.back_to_accounts": "Zurück zu Konten",
 	"generic.back_to_home": "Zurück zur Startseite",
@@ -402,7 +397,7 @@
 	"label-set.edit": "Etikettensatz bearbeiten",
 	"label-set.form.exclusive": "Exklusives Etikett",
 	"label-set.form.exclusive-checkbox": "Fügen Sie pro Etikettensatz nur ein Etikett hinzu",
-	"label-set.form.exclusive-description": "Standardmäßig kann eine Ressource/ein Absatz mehrere Beschriftungen aus demselben Beschriftungssatz haben.",
+	"label-set.form.exclusive-description": "Standardmäßig kann eine Ressource/ein Textblock mehrere Beschriftungen aus demselben Beschriftungssatz haben.",
 	"label-set.form.kind": "Klassifizierungstyp",
 	"label-set.form.kind-warning": "Diese Eigenschaft kann nachträglich nicht mehr geändert werden.",
 	"label-set.form.labels.duplicated-name": "Doppelter Labelname",
@@ -412,7 +407,7 @@
 	"label-set.form.name": "Name des Etikettensatzes",
 	"label-set.form.name-invalid": "Ungültiger Labelsatzname",
 	"label-set.form.name-required": "Der Name des Etikettensatzes ist erforderlich",
-	"label-set.paragraphs": "Absätze",
+	"label-set.paragraphs": "Textblöcke",
 	"label-set.resources": "Ressourcen",
 	"label-set.selections": "Auswahl",
 	"label-set.subtitle": "Etikettensätze durchsuchen und bearbeiten",
@@ -509,7 +504,7 @@
 	"resource.add_labels_success": "Labels wurden erfolgreich für {{count}} Ressourcen hinzugefügt",
 	"resource.adding_labels": "Etiketten hinzufügen",
 	"resource.classification.clean-up": "Bereinigen etikettenauswahl",
-	"resource.classification.no-paragraph-labelset": "Für Absätze ist keine Beschriftung festgelegt. Sie können einige hinzufügen",
+	"resource.classification.no-paragraph-labelset": "Für Textblöcke ist keine Beschriftung festgelegt. Sie können einige hinzufügen",
 	"resource.classification.no-resource-labelset": "Für Ressourcen ist kein Label festgelegt. Sie können einige hinzufügen",
 	"resource.classification.remove-label": "Etikett aus Auswahl entfernen",
 	"resource.classification-column": "Einstufung",
@@ -557,14 +552,14 @@
 	"resource.field.update-successful": "Feld erfolgreich aktualisiert",
 	"resource.field-annotation.help": "Wählen Sie eine Familie aus, um die entsprechenden Elemente hervorzuheben und mit Anmerkungen zu versehen",
 	"resource.field-annotation.select-family-before": "Wählen Sie eine Familie aus, damit Sie Anmerkungen hinzufügen/bearbeiten/entfernen können",
-	"resource.field-classification.help": "Wählen Sie eine Beschriftung und dann die Absätze aus, auf die sie angewendet werden soll",
+	"resource.field-classification.help": "Wählen Sie eine Beschriftung und dann die Textblöcke aus, auf die sie angewendet werden soll",
 	"resource.field-conversation": "Gesprächsfeld",
 	"resource.field-file": "Dateifeld",
 	"resource.field-file-dropzone": "Legen Sie Ihre Datei hier ab oder klicken Sie, um sie auszuwählen",
 	"resource.field-file-dropzone-label": "Um die aktuelle Datei <strong>{{filename}}</strong>zu ersetzen, legen Sie Ihre Datei ab oder klicken Sie unten, um sie auszuwählen",
 	"resource.field-file-new-file": "Neue Datei:",
 	"resource.field-link": "Linkfeld",
-	"resource.field-no-paragraph": "Für dieses Feld wurde kein Absatz extrahiert.",
+	"resource.field-no-paragraph": "Für dieses Feld wurde kein Textblock extrahiert.",
 	"resource.field-text": "Textfeld",
 	"resource.field-text-body-label": "Textkörper",
 	"resource.field-text-format-label": "Textformat",
@@ -674,7 +669,7 @@
 	"stash.create.visual_labeling.help": "Ermöglicht die visuelle Auswahl einiger Teile des Dokumentlayouts und deren Kommentierung.",
 	"stash.create.visual_labeling.label": "Kommentieren Sie nach Auswahl",
 	"stash.create.zone_description": "Wählen Sie die Zone und den Verarbeitungsanbieter aus, den Sie für diese Knowledge Box verwenden möchten (standardmäßig die Zone des Kontos).",
-	"stash.create_service_access": "Erstellen Sie einen neuen Servicezugriff",
+	"stash.create_service_access": "Erstellen Sie einen neuen API-Schlüssel",
 	"stash.delete.delete": "Knowledge Box löschen?",
 	"stash.delete.error": "Fehler beim Erstellen der Knowledge Box",
 	"stash.delete.warning": "Wenn Sie die Knowledge Box {{ kb }}löschen, werden auch alle Daten gelöscht",
@@ -693,7 +688,7 @@
 	"stash.manage_users": "Benutzer verwalten",
 	"stash.name": "Name der Knowledge Box",
 	"stash.name_your_kb": "Benennen Sie Ihre KB",
-	"stash.new_service_access_token": "Erstellen Sie ein neues Token",
+	"stash.new_service_access_token": "Erstellen Sie einen neuen API-Schlüssel",
 	"stash.no_knowledge_boxes": "In diesem Konto sind keine Knowledge Boxes vorhanden",
 	"stash.preferences.receive_help": "Hilfe erhalten",
 	"stash.preferences.receiving_emails": "E-Mail Einstellungen",
@@ -710,14 +705,14 @@
 	"stash.search_users_add": "Möchten Sie diesen Benutzer wirklich zum Konto hinzufügen?",
 	"stash.seats_available": "{{ seats }} Plätze verfügbar",
 	"stash.see_stats": "Siehe Daten",
-	"stash.service_access": "Servicezugang",
-	"stash.service_access_description": "Wichtig! Kopieren und speichern Sie den Token-Code. Es verschwindet, sobald es hinzugefügt wurde.",
+	"stash.service_access": "API-Schlüssel",
+	"stash.service_access_description": "Wichtig! Kopieren und speichern Sie den API-Schlüssel. Es verschwindet, sobald es hinzugefügt wurde.",
 	"stash.settings.processes.classifier": "Schulung zur Label-Suchabsicht",
 	"stash.settings.processes.classifier_info": "Um genaue Vorschläge für die Label-Suche zu erhalten, müssen vorhandene Inhalte mit Labels versehen werden. Je mehr Inhalte gekennzeichnet werden, desto besser wird die Schulung. Sie können auf der Ontologieseite neue Beschriftungen und Klassifizierungen erstellen.",
 	"stash.settings.processes.ner": "Schulung zur Anerkennung benannter Entitäten",
 	"stash.settings.processes.ner_info": "Um Ihre benutzerdefinierten Entitäten automatisch zu erkennen, müssen vorhandene Inhalte mit Ihren benutzerdefinierten Entitäten annotiert werden. Je mehr Inhalte kommentiert werden, desto besser wird das Training. Sie können auf der Insights-Seite neue benutzerdefinierte Entitäten erstellen.",
-	"stash.settings.processes.paragraph-labeler": "Automatisches Training der Absatzbeschriftung",
-	"stash.settings.processes.paragraph-labeler_info": "Um Absätze automatisch zu beschriften, müssen vorhandene Absätze beschriftet werden. Je mehr Inhalte gekennzeichnet werden, desto besser wird die Schulung. Sie können auf der Ontologieseite neue Beschriftungen und Klassifizierungen erstellen.",
+	"stash.settings.processes.paragraph-labeler": "Automatisches Training der Beschriftung von Textblöcken",
+	"stash.settings.processes.paragraph-labeler_info": "Um Textblöcke automatisch zu beschriften, müssen bestehende Textblöcke beschriftet werden. Je mehr Inhalte gekennzeichnet werden, desto besser wird die Schulung. Sie können auf der Klassifizierungsseite neue Etiketten erstellen.",
 	"stash.settings.processes.resource-labeler": "Automatisches Ressourcen-Label-Training",
 	"stash.settings.processes.resource-labeler_info": "Um Ressourcen automatisch zu kennzeichnen, müssen vorhandene Ressourcen gekennzeichnet werden. Je mehr Inhalte gekennzeichnet werden, desto besser wird die Schulung. Sie können auf der Ontologieseite neue Beschriftungen und Klassifizierungen erstellen.",
 	"stash.settings.processes.training.active": "Es gibt ein aktives Training, das Sie jederzeit beenden können. Sie erhalten eine E-Mail, wenn der Vorgang abgeschlossen ist.",
@@ -771,7 +766,7 @@
 	"stash.valid_domains_label": "Domänen, von denen E-Mails gesendet werden können",
 	"stash.valid_emails": "Fügen Sie durch Kommas getrennt die E-Mail-Adressen hinzu, von denen E-Mails akzeptiert werden.",
 	"stash.valid_emails_label": "E-Mails",
-	"stash.view_edit_service_access": "Vorhandenen Dienstzugriff anzeigen/bearbeiten",
+	"stash.view_edit_service_access": "Vorhandene API-Schlüssel anzeigen/bearbeiten",
 	"stash.widgets.answers.help": "Generieren Sie eine Antwort auf die Fragen des Benutzers und ermöglichen Sie den Chat mit dem System",
 	"stash.widgets.answers.label": "Antwortgenerierung",
 	"stash.widgets.autofilter.help": "Erkennt in der Benutzerabfrage erwähnte Entitäten und wandelt sie automatisch in Filter um.",
@@ -824,13 +819,13 @@
 	"stash.widgets.targetNewTab.label": "Ziel: Neuer Tab",
 	"stash.widgets.title": "Such-Widget-Generator",
 	"stash.widgets.warning": "Damit das Widget ordnungsgemäß funktioniert, muss die Knowledge Box <strong>öffentlich sein</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Gefahrenzone! Damit dieses Widget mit einer privaten Knowledge Box funktioniert, müssen Sie ein API-Token bereitstellen.",
+	"stash.widgets.warning-dangerous-snippet": "Gefahrenzone! Damit dieses Widget mit einer privaten Knowledge Box funktioniert, müssen Sie einen API-Schlüssel bereitstellen.",
 	"stash.widgets.warning-dangerous-snippet-details": "Verwenden Sie dieses Snippet nicht auf einer öffentlichen Website.",
 	"stats.endpoint": "NucliaDB-API-Endpunkt",
 	"stats.get_started": "Loslegen",
 	"stats.processing_time": "Bearbeitungszeit",
 	"stats.total.fields": "Felder",
-	"stats.total.paragraphs": "Absätze",
+	"stats.total.paragraphs": "Textblöcke",
 	"stats.total.sentences": "Vektoren",
 	"stats.total.title": "Ressourcen",
 	"stats.total_search": "Gesamtzahl der Suchvorgänge",
