--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -58,7 +58,7 @@
 	"account.manage": "Gestió del compte",
 	"account.manage_account_users": "Gestió dels Usuaris del compte",
 	"account.monthly_consumibles": "Consum mensuals",
-	"account.new_token": "Nou Token",
+	"account.new_token": "Nova clau de l'API",
 	"account.nua_client": "Nom del client",
 	"account.nua_key_activity": "Registre d'activitat",
 	"account.nua_key_activity_subtitle": "Activitat de la Knowledge Box dels últims 30 dies",
@@ -83,7 +83,7 @@
 	"account.stash.users": "Gestió d'usuaris",
 	"account.threshold": "Llindar de consum",
 	"account.title": "Nom",
-	"account.token_description": "<strong>Important!</strong> Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
+	"account.token_description": "<strong>Important!</strong> Copieu i deseu la clau de l'API. Desapareixerà un cop afegit.",
 	"account.token_generation_warning": "Si generes un nou codi perdràs l’accés amb la clau actual i es perdran els processos que s'estiguin executant en aquests moments.",
 	"account.total_queries": "Nombre total de cerques",
 	"account.type.label": "Nivell",
@@ -112,9 +112,6 @@
 	"activity.resource": "Recurs",
 	"activity.search": "Consultes",
 	"activity.timestamp": "Segell de temps",
-	"autocomplete.section.main": "Paraules clau suggerides",
-	"autocomplete.section.next_words": "Paraules suggerides",
-	"autocomplete.section.paragraph": "Paràgraf suggerit",
 	"billing.address": "Adreça",
 	"billing.already_available": "Ja disponible",
 	"billing.amount": "Import",
@@ -145,7 +142,7 @@
 	"billing.end-subscription": "Finalitzar la subscripció",
 	"billing.enterprise_ready": "Llest par a l'empresa",
 	"billing.estimate_cost": "Estima el teu cost",
-	"billing.extra_paragraphs_cost": "Si es supera el límit de paràgrafs emmagatzemats, es cobrarà {{preu}} per cada paràgraf addicional.",
+	"billing.extra_paragraphs_cost": "Si se supera el límit de bloc de text emmagatzemat inclòs, cobrarem {{price}} / bloc de text emmagatzemat.",
 	"billing.features.anon": "Anonimat de dades",
 	"billing.features.apikey": "Clau d'API autoallotjada",
 	"billing.features.boost": "Potenciador d'indexació",
@@ -168,7 +165,6 @@
 	"billing.history.title": "Historial de facturació",
 	"billing.hour": "hora",
 	"billing.hours": "hores",
-	"billing.ingestion_cost.description": "El càlcul dependrà del nombre de paràgrafs dels documents pujats. La calculadora de pressupost us permetrà fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.ingestion_cost.title": "Costos d'ingestió",
 	"billing.invalid_address": "L'adreça proporcionada no és vàlida",
 	"billing.invalid_card": "No hem pogut validar la teva targeta.",
@@ -180,12 +176,12 @@
 	"billing.next-payment": "Proper pagament",
 	"billing.not_company": "No soc una empresa",
 	"billing.order_number": "Número de comanda",
-	"billing.paragraphs_per_file": "Un fitxer de text de 10 pàgines conté aproximadament 300 paràgrafs",
+	"billing.paragraphs_per_file": "Un fitxer de text de 10 pàgines conté aproximadament 300 blocs de text",
 	"billing.parameter.files": "Quants documents?",
 	"billing.parameter.generative": "Quantes respostes generatives?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
-	"billing.parameter.paragraphs": "Quants paràgrafs emmagatzemats?",
-	"billing.parameter.paragraphs_processed": "Quants paragrafs processats?",
+	"billing.parameter.paragraphs": "Quants blocs de text emmagatzemats?",
+	"billing.parameter.paragraphs_processed": "Quants blocs de text processats?",
 	"billing.parameter.predict": "Quantes prediccions?",
 	"billing.parameter.qa": "Quantes respostes generatives?",
 	"billing.parameter.searches": "Quantes cerques?",
@@ -201,8 +197,8 @@
 	"billing.quotas.ingestion": "Ingestió",
 	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
 	"billing.quotas.media": "Indexació de vídeo i àudio",
-	"billing.quotas.paragraphs": "Paràgrafs emmagatzemats",
-	"billing.quotas.paragraphs_processed": "Número de paràgrafs",
+	"billing.quotas.paragraphs": "Bloc de text emmagatzemat",
+	"billing.quotas.paragraphs_processed": "Nombre de blocs de text",
 	"billing.quotas.predict": "Prediccions",
 	"billing.quotas.search_inference": "Cerca / Inferència",
 	"billing.quotas.searches": "Recerques",
@@ -297,7 +293,6 @@
 	"generic.all": "Tots",
 	"generic.allow": "Permetre",
 	"generic.announce": "Informació de l'usuari",
-	"generic.authentication_token": "Token d'autenticació",
 	"generic.back": "Enrere",
 	"generic.back_to_accounts": "Tornar a Comptes",
 	"generic.back_to_home": "Tornar a la Home",
@@ -401,7 +396,7 @@
 	"label-set.edit": "Edita el conjunt d'etiquetes",
 	"label-set.form.exclusive": "Etiqueta exclusiva",
 	"label-set.form.exclusive-checkbox": "Afegiu només una etiqueta per conjunt d'etiquetes",
-	"label-set.form.exclusive-description": "Per defecte, un recurs/paràgraf pot tenir diverses etiquetes d'un mateix conjunt d'etiquetes.",
+	"label-set.form.exclusive-description": "Per defecte, un recurs/bloc de text pot tenir diverses etiquetes d'un mateix conjunt d'etiquetes.",
 	"label-set.form.kind": "Tipus de classificació",
 	"label-set.form.kind-warning": "Aquesta propietat no es pot modificar després.",
 	"label-set.form.labels.duplicated-name": "Nom de l'etiqueta duplicat",
@@ -411,7 +406,7 @@
 	"label-set.form.name": "Nom del conjunt d'etiquetes",
 	"label-set.form.name-invalid": "El nom del conjunt d'etiquetes no és vàlid",
 	"label-set.form.name-required": "El nom del conjunt d'etiquetes és obligatori",
-	"label-set.paragraphs": "Paràgrafs",
+	"label-set.paragraphs": "Blocs de text",
 	"label-set.resources": "Recursos",
 	"label-set.selections": "Seleccions",
 	"label-set.subtitle": "Exploreu i editeu conjunts d'etiquetes",
@@ -508,7 +503,7 @@
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
 	"resource.adding_labels": "Afegint etiquetes",
 	"resource.classification.clean-up": "Neteja la selecció d'etiquetes",
-	"resource.classification.no-paragraph-labelset": "No hi ha cap etiqueta establerta per als paràgrafs. Podeu afegir-ne alguns",
+	"resource.classification.no-paragraph-labelset": "No hi ha cap etiqueta establerta per als blocs de text. Podeu afegir-ne alguns",
 	"resource.classification.no-resource-labelset": "No hi ha cap etiqueta establerta per als recursos. Podeu afegir-ne alguns",
 	"resource.classification.remove-label": "Elimina l'etiqueta de la selecció",
 	"resource.classification-column": "Classificació",
@@ -556,14 +551,14 @@
 	"resource.field.update-successful": "El camp s'ha actualitzat correctament",
 	"resource.field-annotation.help": "Seleccioneu una família per destacar i anotar les entitats corresponents",
 	"resource.field-annotation.select-family-before": "Seleccioneu una família perquè pugueu afegir/editar/eliminar anotacions",
-	"resource.field-classification.help": "Trieu una etiqueta i seleccioneu els paràgrafs sobre els quals voleu que s'apliqui",
+	"resource.field-classification.help": "Trieu una etiqueta i, a continuació, seleccioneu els blocs de text als quals voleu que s'apliqui",
 	"resource.field-conversation": "Camp de conversa",
 	"resource.field-file": "Camp de Fitxer",
 	"resource.field-file-dropzone": "Deixeu anar el vostre fitxer aquí o feu clic per seleccionar-lo",
 	"resource.field-file-dropzone-label": "Per substituir el fitxer actual <strong>{{filename}}</strong>, deixeu anar el fitxer o feu clic a continuació per seleccionar-lo",
 	"resource.field-file-new-file": "Nou fitxer:",
 	"resource.field-link": "Camp d'Enllaç",
-	"resource.field-no-paragraph": "No s'ha extret cap paràgraf per a aquest camp.",
+	"resource.field-no-paragraph": "No s'ha extret cap bloc de text per a aquest camp.",
 	"resource.field-text": "Camp de Text",
 	"resource.field-text-body-label": "Cos del text",
 	"resource.field-text-format-label": "Format de text",
@@ -673,7 +668,7 @@
 	"stash.create.visual_labeling.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
 	"stash.create.visual_labeling.label": "Anotar per selecció",
 	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta Knowledge Box. De forma predeterminada apareix la zona escollida a l’Account",
-	"stash.create_service_access": "Crea un nou Service Access",
+	"stash.create_service_access": "Crea una clau d'API nova",
 	"stash.delete.delete": "Eliminar Knowledge Box?",
 	"stash.delete.error": "Error en crear el Knowledge Box",
 	"stash.delete.warning": "Si borres la Knowledge Box {{ kb }} també s'esborraran totes les dades que conté.",
@@ -692,7 +687,7 @@
 	"stash.manage_users": "Gestionar usuaris",
 	"stash.name": "Nom de la Knowledge Box",
 	"stash.name_your_kb": "Anomena el teu KB",
-	"stash.new_service_access_token": "Crear un nou token",
+	"stash.new_service_access_token": "Creeu una nova clau d'API",
 	"stash.no_knowledge_boxes": "No hi ha cap cas de Knowledge Boxes en aquest compte",
 	"stash.preferences.receive_help": "Rebre ajuda",
 	"stash.preferences.receiving_emails": "Preferències del correu electrònic",
@@ -709,14 +704,14 @@
 	"stash.search_users_add": "Vols afegir aquest nou usuari al compte?",
 	"stash.seats_available": "Queden {{ seats }} seients",
 	"stash.see_stats": "Veure dades",
-	"stash.service_access": "Service Access",
-	"stash.service_access_description": "Important! Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
+	"stash.service_access": "Claus API",
+	"stash.service_access_description": "Important! Copieu i deseu la clau de l'API. Desapareixerà un cop afegit.",
 	"stash.settings.processes.classifier": "Formació sobre la intenció de cerca d'etiquetes",
 	"stash.settings.processes.classifier_info": "Per obtenir suggeriments de cerca d'etiquetes precisos, el contingut existent s'ha d'etiquetar. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
 	"stash.settings.processes.ner": "Formació de reconeixement d'entitats anomenades",
 	"stash.settings.processes.ner_info": "Per reconèixer les vostres entitats personalitzades automàticament, el contingut existent s'ha d'anotar amb les vostres entitats personalitzades. A mesura que s'anoti més contingut, la formació millorarà. Podeu crear noves entitats personalitzades des de la pàgina Estadístiques.",
-	"stash.settings.processes.paragraph-labeler": "Formació automàtica d'etiquetes de paràgrafs",
-	"stash.settings.processes.paragraph-labeler_info": "Per etiquetar els paràgrafs automàticament, s'han d'etiquetar els paràgrafs existents. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
+	"stash.settings.processes.paragraph-labeler": "Formació automàtica d'etiquetes de blocs de text",
+	"stash.settings.processes.paragraph-labeler_info": "Per etiquetar els blocs de text automàticament, els blocs de text existents s'han d'etiquetar. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear etiquetes noves des de la pàgina de classificació.",
 	"stash.settings.processes.resource-labeler": "Formació automàtica d'etiquetes de recursos",
 	"stash.settings.processes.resource-labeler_info": "Per etiquetar recursos automàticament, cal etiquetar els recursos existents. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear noves etiquetes i classificacions des de la pàgina d'ontologia.",
 	"stash.settings.processes.training.active": "Hi ha un entrenament actiu que pots aturar en qualsevol moment. Rebràs un correu electrònic quan estigui complet.",
@@ -770,7 +765,7 @@
 	"stash.valid_domains_label": "Dominis des d’on es pot enviar correu electrònic",
 	"stash.valid_emails": "Afegeix, separats per comes, els correus electrònics dels quals s’acceptarà correu electrònic",
 	"stash.valid_emails_label": "Correus electrònics",
-	"stash.view_edit_service_access": "Visualitza / Edita els Service Access existents",
+	"stash.view_edit_service_access": "Visualitza / edita les claus de l'API existents",
 	"stash.widgets.answers.help": "Genera resposta a les preguntes dels usuaris i permet xatejar amb el sistema",
 	"stash.widgets.answers.label": "Generació de respostes",
 	"stash.widgets.autofilter.help": "Detecta les entitats mencionades a la consulta de l'usuari i les converteix automàticament en filtres",
@@ -823,13 +818,13 @@
 	"stash.widgets.targetNewTab.label": "Orienta una pestanya nova",
 	"stash.widgets.title": "Generador de widgets de cerca",
 	"stash.widgets.warning": "Perquè el giny funcioni correctament, el Knowledge Box <strong>ha de ser públic</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Zona perillosa! Perquè aquest giny funcioni amb una Knowledge Box privada, cal que proporcioneu un testimoni d'API.",
+	"stash.widgets.warning-dangerous-snippet": "Zona perillosa! Perquè aquest giny funcioni amb un Knowledge Box privat, cal que proporcioneu una clau API.",
 	"stash.widgets.warning-dangerous-snippet-details": "No utilitzeu aquest fragment en un lloc web públic.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Començar",
 	"stats.processing_time": "Temps de processament",
 	"stats.total.fields": "Camps",
-	"stats.total.paragraphs": "Paràgrafs",
+	"stats.total.paragraphs": "Blocs de text",
 	"stats.total.sentences": "Vectors",
 	"stats.total.title": "Recursos",
 	"stats.total_search": "Total d'operacions de cerca",
