--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -788,6 +788,8 @@
 	"stash.widgets.hideThumbnails.label": "Hide thumbnails",
 	"stash.widgets.hint_1": "For the correct reading of the results, the width of the search bar should not be less than 384px.",
 	"stash.widgets.hint_2": "If your search page background color isn't neutral, remember to add a background color on your search box to make it easier to read.",
+	"stash.widgets.knowledgeGraph.help": "Allow to show all the relations between entities for a given resource",
+	"stash.widgets.knowledgeGraph.label": "Relations graph",
 	"stash.widgets.labels": "Filter by labels",
 	"stash.widgets.navigateToFile.help": "When using Nuclia to search web pages, clicking on a result will open the original file rather than rendering it in the viewer",
 	"stash.widgets.navigateToFile.label": "Navigate to files",
