Answer generation model (cohere) should not be translated

--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -644,8 +644,8 @@
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
 	"stash.config.option.cohere": "Cohere (Beta)",
 	"stash.config.option.generative-multilingual-2023": "Mehrsprachiges Privatmodell von Nuclia",
-	"stash.config.option.multilingual-2023-08-16": "mehrsprachig (Alpha)",
-	"stash.config.option.palm": "Google PaLM 2 (Beta)",
+	"stash.config.option.multilingual-2023-08-16": "mehrsprachig (alpha)",
+	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Eigenen Schlüssel verwenden",
 	"stash.config.success": "Die neuen Einstellungen wurden erfolgreich gespeichert.",
 	"stash.confirm_delete_user.description": "Sie können diese Aktion nur rückgängig machen, indem Sie sie erneut einladen, sich Ihrer Knowledge Box anzuschließen.",
