--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -642,10 +642,10 @@
 	"stash.config.option.anthropic": "Anthropic Claude",
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
-	"stash.config.option.cohere": "Cohérer (bêta)",
+	"stash.config.option.cohere": "Cohere (beta)",
 	"stash.config.option.generative-multilingual-2023": "Modèle privé multilingue Nuclia",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
-	"stash.config.option.palm": "Google PaLM 2 (bêta)",
+	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utiliser sa propre clé",
 	"stash.config.success": "Les nouveaux paramètres ont été enregistrés avec succès.",
 	"stash.confirm_delete_user.description": "La seule façon d’annuler cette action est de les inviter à nouveau à rejoindre votre Knowledge Box.",
