--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -642,9 +642,9 @@
 	"stash.config.option.anthropic": "Anthropic Claude",
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
-	"stash.config.option.cohere": "Coerente (beta)",
+	"stash.config.option.cohere": "Cohere (beta)",
 	"stash.config.option.generative-multilingual-2023": "Modelo privado multilíngue Nuclia",
-	"stash.config.option.multilingual-2023-08-16": "multilíngue (alfa)",
+	"stash.config.option.multilingual-2023-08-16": "multilíngue (alpha)",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Usar chave própria",
 	"stash.config.success": "As novas configurações foram salvas com sucesso.",
